src/validation/tests/snapshots/rusty__validation__tests__duplicates_validation_test__duplicate_pous_and_types_validation.snap
---
source: src/validation/tests/duplicates_validation_test.rs
expression: "&diagnostics"
---
error[E004]: foo: Ambiguous datatype.
  ┌─ <internal>:3:14
  │
2 │         FUNCTION_BLOCK  foo  END_FUNCTION_BLOCK
  │                         --- see also
3 │         TYPE foo : INT; END_TYPE
  │              ^^^ foo: Ambiguous datatype.

error[E004]: foo: Ambiguous datatype.
  ┌─ <internal>:2:25
  │
2 │         FUNCTION_BLOCK  foo  END_FUNCTION_BLOCK
  │                         ^^^ foo: Ambiguous datatype.
3 │         TYPE foo : INT; END_TYPE
  │              --- see also
